...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:startIconDrawable="@drawable/reg_email_icon"
                app:startIconTint="#ED4639">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvEmailTe_login_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

...
                app:layout_constraintStart_toStartOf="@id/tvLoginEmail"
                app:layout_constraintTop_toBottomOf="@id/tvLoginEmail"
                app:startIconDrawable="@drawable/registration_password_lock"
                app:startIconTint="#ED4639">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvEditPassword_login_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_width="63dp"
                android:layout_height="37dp"
                android:layout_marginStart="36dp"
                android:outlineSpotShadowColor="@color/white"
                android:elevation="40dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btn_login_screen"
                app:layout_constraintStart_toStartOf="@+id/btn_login_screen"
                app:layout_constraintTop_toTopOf="@+id/btn_login_screen"
                app:layout_constraintVertical_bias="0.533" />

            <TextView
                android:id="@+id/tv_account"
...
