<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_profile_appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/profile_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/fragment_profile_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_profile_image_cv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_image_user_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ignore"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fragment_profile_image_iv" />


                <ProgressBar
                    android:id="@+id/progress_circular"
                    style="?attr/progressBarStyle"
                    android:layout_width="13dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="40dp"
                    android:max="100"
                    android:progress="40"
                    android:visibility="gone"
                    tools:layout_editor_absoluteX="0dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="@id/fragment_profile_image_cv"
                app:layout_constraintEnd_toEndOf="@id/fragment_profile_image_cv">

                <ImageView
                    android:id="@+id/iv_image_profile"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical|center_horizontal"
                    android:contentDescription="@string/ignore"
                    android:src="@drawable/ic_camera" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/fragment_profile_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/fragment_profile_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_profile_image_cv"
                app:layout_constraintTop_toTopOf="@id/fragment_profile_image_cv" />

            <TextView
                android:id="@+id/fragment_profile_email_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profile_email"
                app:layout_constraintBottom_toTopOf="@id/fragment_profile_title_tv"
                app:layout_constraintEnd_toEndOf="@id/fragment_profile_name_tv"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_name_tv"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_name_tv" />

            <TextView
                android:id="@+id/fragment_profile_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/fragment_profile_title"
                android:textColor="#E94138"
                app:layout_constraintBottom_toBottomOf="@id/fragment_profile_image_cv"
                app:layout_constraintEnd_toEndOf="@id/fragment_profile_email_tv"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_email_tv" />

            <TextView
                android:id="@+id/fragment_profile_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/my_account"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_image_cv"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_image_cv" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/fragment_profile_bookings_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_image_cv"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_account_tv">

                <TextView
                    android:id="@+id/fragment_profile_bookings_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:paddingVertical="20dp"
                    android:text="@string/bookings_history" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:contentDescription="@string/ignore"
                    android:paddingVertical="20dp"
                    android:src="@drawable/ic_forward" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:background="#F5F5F5"
                app:layout_constraintEnd_toEndOf="@id/fragment_profile_title_tv"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_bookings_con"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_bookings_con" />

            <LinearLayout
                android:id="@+id/fragment_profile_help_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_bookings_con"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_bookings_con">

                <TextView
                    android:id="@+id/fragment_profile_help_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:paddingVertical="20dp"
                    android:text="@string/help_amp_support" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:contentDescription="@string/ignore"
                    android:paddingVertical="20dp"
                    android:src="@drawable/ic_forward"
                    app:layout_constraintBottom_toBottomOf="@id/fragment_profile_help_tv"
                    app:layout_constraintEnd_toEndOf="@id/fragment_profile_title_tv"
                    app:layout_constraintTop_toTopOf="@id/fragment_profile_help_tv" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:background="#F5F5F5"
                app:layout_constraintEnd_toEndOf="@id/fragment_profile_help_con"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_help_con"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_help_con" />

            <LinearLayout
                android:id="@+id/fragment_profile_privacy_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_help_con"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_help_con">

                <TextView
                    android:id="@+id/fragment_profile_privacy_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:paddingVertical="20dp"
                    android:text="@string/privacy_policy" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:contentDescription="@string/ignore"
                    android:paddingVertical="20dp"
                    android:src="@drawable/ic_forward"
                    app:layout_constraintBottom_toBottomOf="@id/fragment_profile_privacy_tv"
                    app:layout_constraintEnd_toEndOf="@id/fragment_profile_title_tv"
                    app:layout_constraintTop_toTopOf="@id/fragment_profile_privacy_tv" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:background="#F5F5F5"
                app:layout_constraintEnd_toEndOf="@id/fragment_profile_privacy_con"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_privacy_con"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_privacy_con" />

            <TextView
                android:id="@+id/fragment_profile_logout_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="20dp"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/fragment_profile_privacy_con"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_privacy_con" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>