<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.ResetPasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        local:layout_constraintEnd_toEndOf="parent"
        local:layout_constraintStart_toStartOf="parent"
        local:layout_constraintTop_toTopOf="parent"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_reset_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="Reset Password"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:scaleType="center"
                android:src="@drawable/iv_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_reset_password_Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/new_password"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#ED4639"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_reset_password"
                app:startIconDrawable="@drawable/registration_password_lock"
                app:startIconTint="#ED4639">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvEmailText_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_check_empty_newPassword_resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:padding="2dp"
                android:text="please enter your new password"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/tv_new_password_reset_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reset_password_Email" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_new_password_reset_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="Confirm Password"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#ED4639"
                app:layout_constraintEnd_toEndOf="@id/tv_reset_password_Email"
                app:layout_constraintStart_toStartOf="@id/tv_reset_password_Email"
                app:layout_constraintTop_toBottomOf="@id/tv_reset_password_Email"
                app:startIconDrawable="@drawable/registration_password_lock"
                app:startIconTint="#ED4639">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_confirm_Password_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_reset_Password_already_have_acct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="35dp"
                android:text="Already a member?"
                android:textSize="18sp"
                local:layout_constraintEnd_toStartOf="@+id/tv_reset_password_Login_text"
                local:layout_constraintHorizontal_bias="0.5"
                local:layout_constraintHorizontal_chainStyle="packed"
                local:layout_constraintStart_toStartOf="parent"
                local:layout_constraintTop_toBottomOf="@id/tv_new_password_reset_password" />

            `

            <TextView
                android:id="@+id/tv_reset_password_Login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:autoLink="all"
                android:clickable="true"
                android:focusable="true"
                android:padding="0dp"
                android:text="@string/forgot_password_login"
                android:textColor="#2347F2"
                android:textSize="18sp"
                local:layout_constraintEnd_toStartOf="@+id/textView2"
                local:layout_constraintHorizontal_bias="0.5"
                local:layout_constraintStart_toEndOf="@+id/tv_reset_Password_already_have_acct"
                local:layout_constraintTop_toTopOf="@id/tv_reset_Password_already_have_acct" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="here."
                android:textSize="18sp"
                local:layout_constraintBottom_toBottomOf="@id/tv_reset_password_Login_text"
                local:layout_constraintEnd_toEndOf="parent"
                local:layout_constraintHorizontal_bias="0.5"
                local:layout_constraintStart_toEndOf="@+id/tv_reset_password_Login_text"
                local:layout_constraintTop_toTopOf="@id/tv_reset_password_Login_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/registration_custom_button"
                android:gravity="center"
                android:text="Reset Password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reset_Password_already_have_acct"
                app:layout_constraintVertical_bias="0.0"
                local:layout_constraintHorizontal_bias="0.495" />

            <TextView
                android:id="@+id/tv_check_empty_confirmPassword_resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="2dp"
                android:text="please enter your new password"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_new_password_reset_password" />

            <ProgressBar
                android:id="@+id/fragment_resetPassword_progressBar_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btn_reset_password"
                app:layout_constraintEnd_toEndOf="@id/btn_reset_password"
                app:layout_constraintStart_toStartOf="@id/btn_reset_password"
                app:layout_constraintTop_toTopOf="@id/btn_reset_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>